--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="header">
     <section class="container">
       <nav>
-        <img src="/assets/images/MOAT.jpg" id="logo">
+        <img src="./assets/images/MOAT.jpg" id="logo">
         <h3>MAC of All Trades</h3>
         <ul>
           <li><a href="#About">About Me</a></li>
