--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section id="About-col-2">
               <h1>About Me</h1>
               <p>I am a proud Wisconsin native. I learned basic Javascript while attending St. Johns NW Military Acadmeny.
-                 I am currently earning my accredited full stack web development certification at Arizon State University. </p>
+                 I am currently earning my accredited full stack web development certification at Arizon State University. Im dope AF </p>
             </section>
         </div>
 
